--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,29 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyA3JT568wv0IWRtD7ogbyyUCdPASkIX2n0",
+      authDomain: "formulir-game.firebaseapp.com",
+      projectId: "formulir-game",
+      storageBucket: "formulir-game.appspot.com",
+      messagingSenderId: "388714679693",
+      appId: "1:388714679693:web:bf7aeeb64dba5c9e4f81c4",
+      measurementId: "G-GTEV1W1XML"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
